updating variable names
